--- a/containerization/helm-charts/templates/turbo/service.yaml
+++ b/containerization/helm-charts/templates/turbo/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "common.names.fullname" . }}-turbo-new
+  name: {{ include "common.names.fullname" . }}-turbo
   labels: {{- include "common.labels.standard" . | nindent 4 }}
     app.kubernetes.io/component: turbo
     {{- if .Values.commonLabels }}
