feat: 提供kubernetes部署方案 issue #4935

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ containerization/helm-charts/bk-ci*.tgz
 src/backend/turbo/**/build/
 src/backend/turbo/release/
 src/backend/turbo/containerization/
+containerization/bk-ci*.tgz
