--- a/containerization/values.yaml
+++ b/containerization/values.yaml
@@ -23,13 +23,13 @@ nginx-ingress-controller:
 gatewayImage:
   registry: mirrors.tencent.com/bkce
   repository: bkci/gateway
-  tag: 1.16.0
+  tag: __image_gateway_tag__
   pullPolicy: IfNotPresent 
   pullSecrets: []
 backendImage:
   registry: mirrors.tencent.com/bkce
   repository: bkci/backend
-  tag: 1.16.0
+  tag: __image_backend_tag__
   pullPolicy: IfNotPresent 
   pullSecrets: []
 
