--- a/src/backend/ci/ext/tencent/stream/boot-stream-tencent/src/test/resources/templates/repoC/templates/pipeline.yml
+++ b/src/backend/ci/ext/tencent/stream/boot-stream-tencent/src/test/resources/templates/repoC/templates/pipeline.yml
@@ -26,6 +26,12 @@ stages:
     id: root_stage_id_1
     if: [ envs.BK_CI_EVENT == 'push' || varivable.approve ]
     check-in:
+      reviews:
+        flows:
+          - name: 审批组1
+            reviewers: [ "${{ci.actor}}" ]
+          - name: 审批组2
+            reviewers: ${{ci.actor}}
       gates:
         - template: epc_checks.yml
           parameters:
