--- a/containerization/values.yaml
+++ b/containerization/values.yaml
@@ -22,13 +22,13 @@ nginx-ingress-controller:
 # 镜像配置
 gatewayImage:
   registry: mirrors.tencent.com/bkce
-  repository: bkci/gateway
+  repository: bkci-gateway
   tag: __image_gateway_tag__
   pullPolicy: IfNotPresent 
   pullSecrets: []
 backendImage:
   registry: mirrors.tencent.com/bkce
-  repository: bkci/backend
+  repository: bkci-backend
   tag: __image_backend_tag__
   pullPolicy: IfNotPresent 
   pullSecrets: []
