--- a/src/gateway/tencent/vhosts/devops.artifactory.jfrog.conf
+++ b/src/gateway/tencent/vhosts/devops.artifactory.jfrog.conf
@@ -350,7 +350,7 @@ location ~ ^/bk-plugin-fe/(.*) {
     set $sub_path $1;
 
     set_by_lua_block $domain {
-        return config.artifactory.domain
+        return config.bkrepo.static_domain
     }
 
     # 设置proxy header的变量
@@ -359,5 +359,5 @@ location ~ ^/bk-plugin-fe/(.*) {
     more_set_headers "Content-Disposition: " , "Cache-Control: no-cache";
 
     # 反向代理到目标ip，端口，路径和参数
-    proxy_pass http://$domain/generic-local/bk-plugin-fe/$sub_path?$args;
+    proxy_pass http://$domain/bk-plugin-fe/$sub_path?$args;
 }
