--- a/src/gateway/tencent/vhosts/devops.artifactory.jfrog.conf
+++ b/src/gateway/tencent/vhosts/devops.artifactory.jfrog.conf
@@ -359,5 +359,5 @@ location ~ ^/bk-plugin-fe/(.*) {
     more_set_headers "Content-Disposition: " , "Cache-Control: no-cache";
 
     # 反向代理到目标ip，端口，路径和参数
-    proxy_pass http://$domain/bk-plugin-fe/$sub_path?$args;
+    proxy_pass http://$domain/bk-store/bk-plugin-fe/$sub_path?$args;
 }
