--- a/src/frontend/devops-codelib/package.json
+++ b/src/frontend/devops-codelib/package.json
@@ -34,18 +34,14 @@
         "eslint-plugin-standard": "~4.0.0",
         "eslint-plugin-vue": "^6.2.2",
         "expose-loader": "^0.7.5",
-        "html-webpack-plugin": "^3.2.0",
-        "mini-css-extract-plugin": "^0.4.0",
-        "node-sass": "^4.12.0",
-        "sass-loader": "^7.0.1",
+        "mini-css-extract-plugin": "^2.4.2",
+        "sass": "^1.42.1",
+        "sass-loader": "^12.1.0",
         "terser-webpack-plugin": "^1.3.0",
         "url-loader": "^1.0.1",
-        "vue-loader": "^15.0.9",
+        "vue-loader": "^15.9.8",
         "vue-template-compiler": "2.6.12",
-        "webpack": "^4.8.1",
-        "webpack-bundle-analyzer": "^3.3.2",
-        "webpack-cli": "^3.1.1",
-        "webpack-dev-server": "^3.1.4"
+        "webpack": "^5.58.1"
     },
     "scripts": {
         "dev": "cross-env NODE_ENV=dev webpack-dev-server --mode development",
