--- a/src/frontend/devops-nav/package.json
+++ b/src/frontend/devops-nav/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
-    "add-asset-html-webpack-plugin": "^2.1.3",
+    "add-asset-html-webpack-plugin": "^3.2.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "~10.0.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -45,30 +45,19 @@
     "eslint-plugin-standard": "~4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "exports-loader": "^0.7.0",
-    "file-loader": "^1.1.11",
     "fork-ts-checker-webpack-plugin": "^5.0.5",
-    "ghooks": "^2.0.4",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.1.0",
-    "imports-loader": "^0.8.0",
-    "inline-chunk-manifest-html-webpack-plugin": "^2.0.0",
-    "mini-css-extract-plugin": "^0.2.0",
-    "node-sass": "^4.9.4",
-    "sass-loader": "^6.0.7",
-    "script-ext-html-webpack-plugin": "^1.8.8",
-    "source-map-loader": "^0.2.3",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.2",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
     "style-loader": "^0.20.3",
-    "svg-sprite-loader": "^3.7.3",
     "terser-webpack-plugin": "^1.3.0",
     "ts-loader": "^4.1.0",
     "typescript": "3.4.5",
     "url-loader": "^1.0.1",
-    "vue-loader": "^15.0.9",
+    "vue-loader": "^15.9.8",
     "vue-template-compiler": "2.6.12",
-    "webpack": "^4.2.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.1"
+    "webpack": "^5.58.1"
   },
   "dependencies": {
     "@icon-cool/bk-icon-devops": "^0.1.13",
