--- a/src/frontend/devops-pipeline/package.json
+++ b/src/frontend/devops-pipeline/package.json
@@ -47,7 +47,6 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-import-bk-magic-vue": "^2.0.9",
     "babel-plugin-istanbul": "^4.1.5",
-    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
@@ -56,11 +55,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.2",
-    "chalk": "^2.1.0",
-    "cheerio": "^1.0.0-rc.2",
     "cli-plugin-eslint": "^0.1.0",
-    "compression-webpack-plugin": "^1.0.0",
-    "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
@@ -78,47 +73,33 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.5",
     "extract-text-webpack-plugin": "^3.0.0",
-    "faker": "^4.1.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "ghooks": "^2.0.4",
-    "gulp-inject": "^4.3.1",
-    "gulp-svg-sprite": "^1.3.7",
-    "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.17.4",
-    "inject-loader": "^3.0.1",
+    "html-webpack-plugin": "^5.3.2",
     "jquery": "^3.2.1",
-    "lodash-webpack-plugin": "^0.11.4",
-    "mini-css-extract-plugin": "^0.5.0",
+    "mini-css-extract-plugin": "^2.4.2",
     "mocha": "^3.5.3",
     "moment": "^2.18.1",
-    "node-sass": "^4.12.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "resolve-url-loader": "^3.0.0",
     "rider": "^2.0.0",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
     "sinon": "^3.3.0",
     "sinon-chai": "^2.13.0",
     "style-loader": "^0.18.2",
-    "svg-sprite-loader": "^4.1.3",
     "terser-webpack-plugin": "^1.3.0",
     "tether-drop": "^1.4.2",
     "throttle-debounce": "^1.0.1",
     "url-loader": "^1.1.2",
     "validate-commit-msg": "^2.14.0",
-    "vue-loader": "^15.4.2",
+    "vue-loader": "^15.9.8",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "2.6.12",
-    "webpack": "^4.27.1",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack": "^5.58.1"
   },
   "engines": {
     "node": ">= 4.0.0",
