--- a/src/frontend/devops-quality/package.json
+++ b/src/frontend/devops-quality/package.json
@@ -29,20 +29,13 @@
     "css-loader": "^0.28.11",
     "eslint": "^7.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "expose-loader": "^0.7.5",
-    "ghooks": "^2.0.4",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
+    "mini-css-extract-plugin": "^2.4.2",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
     "url-loader": "^1.0.1",
     "validate-commit-msg": "^2.14.0",
-    "vue-loader": "^15.0.9",
-    "webpack": "^4.8.1",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.4"
+    "vue-loader": "^15.9.8",
+    "webpack": "^5.58.1"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --mode development",
