--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -2,16 +2,20 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "chalk": "^4.0.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^1.4.0",
+    "husky": "^3.0.7",
     "lerna": "3.17.0",
+    "lint-staged": "^10.2.11",
     "node-fetch": "^2.6.0",
     "ora": "^3.4.0",
-    "husky": "^3.0.7",
-    "lint-staged": "^10.2.11",
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^9.1.1"
+    "svg-sprite-loader": "^6.0.9",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "scripts": {
     "start": "lerna bootstrap",
@@ -43,5 +47,8 @@
     "devops-quality",
     "devops-nav",
     "devops-turbo"
-  ]
+  ],
+  "dependencies": {
+    "@babel/eslint-parser": "^7.15.8"
+  }
 }
