--- a/src/frontend/devops-codelib/package.json
+++ b/src/frontend/devops-codelib/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "dependencies": {
+        "core-js": "3.10.0",
         "vuex-class": "^0.3.0"
     },
     "devDependencies": {
@@ -21,7 +22,7 @@
         "babel-preset-env": "^1.6.1",
         "babel-preset-stage-2": "^6.24.1",
         "cli-plugin-eslint": "^0.1.0",
-        "copy-webpack-plugin": "^4.5.1",
+        "copy-webpack-plugin": "9.0.1",
         "cross-env": "^5.1.4",
         "css-loader": "^0.28.11",
         "eslint": "^7.3.1",
