--- a/src/frontend/devops-nav/package.json
+++ b/src/frontend/devops-nav/package.json
@@ -32,7 +32,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-1": "^6.24.1",
     "cli-plugin-eslint": "^0.1.0",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "9.0.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "eslint": "^7.3.1",
@@ -66,6 +66,7 @@
     "axios": "^0.21.1",
     "bk-magic-vue": "2.3.0",
     "bluebird": "^3.5.1",
+    "core-js": "3.10.0",
     "js-cookie": "^2.2.0",
     "popper.js": "^1.14.4",
     "vee-validate": "^2.0.9",
