--- a/src/frontend/devops-pipeline/package.json
+++ b/src/frontend/devops-pipeline/package.json
@@ -20,6 +20,7 @@
     "brace": "^0.10.0",
     "clipboard": "^1.7.1",
     "cookie": "^0.3.1",
+    "core-js": "3.10.0",
     "gulp": "^3.9.1",
     "js-base64": "^2.4.3",
     "lodash": "^4.17.4",
@@ -56,7 +57,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.2",
     "cli-plugin-eslint": "^0.1.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "9.0.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
