--- a/src/frontend/devops-turbo/package.json
+++ b/src/frontend/devops-turbo/package.json
@@ -16,7 +16,7 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "9.0.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "eslint": "^7.3.1",
@@ -46,6 +46,7 @@
     "public:external": "cross-env NODE_ENV=external webpack --mode production"
   },
   "dependencies": {
-    "@blueking/bkcharts": "^2.0.10"
+    "@blueking/bkcharts": "^2.0.10",
+    "core-js": "3.10.0"
   }
 }
