--- a/src/frontend/devops-artifactory/package.json
+++ b/src/frontend/devops-artifactory/package.json
@@ -6,6 +6,7 @@
     "brace": "^0.10.0",
     "clipboard": "^1.7.1",
     "cookie": "^0.3.1",
+    "core-js": "3.10.0",
     "vee-validate": "^2.0.3",
     "vue-file-upload": "^0.1.12",
     "vue-property-decorator": "^6.0.0",
@@ -28,7 +29,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "cli-plugin-eslint": "^0.1.0",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "9.0.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "eslint": "^7.3.1",
