--- a/src/frontend/devops-environment/package.json
+++ b/src/frontend/devops-environment/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "brace": "^0.10.0",
     "clipboard": "^1.7.1",
+    "core-js": "3.10.0",
     "vee-validate": "^2.0.3",
     "vue-echarts": "^3.0.9",
     "vue-file-upload": "^0.1.12",
@@ -26,7 +27,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "cli-plugin-eslint": "^0.1.0",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "9.0.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "entrypoint-assets-webpack-plugin": "^1.2.0",
