--- a/src/frontend/devops-ticket/package.json
+++ b/src/frontend/devops-ticket/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "brace": "^0.10.0",
+    "core-js": "3.10.0",
     "vee-validate": "^2.0.3",
     "vue-file-upload": "^0.1.12",
     "vuex-class": "^0.3.0"
@@ -24,7 +25,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "cli-plugin-eslint": "^0.1.0",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "9.0.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "eslint": "^7.3.1",
