--- a/src/frontend/devops-ticket/package.json
+++ b/src/frontend/devops-ticket/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "brace": "^0.10.0",
+    "core-js": "3.10.0",
     "vee-validate": "^2.0.3",
     "vue-file-upload": "^0.1.12",
     "vuex-class": "^0.3.0"
