--- a/src/frontend/.babelrc
+++ b/src/frontend/.babelrc
@@ -5,7 +5,8 @@
       {
         "modules": "commonjs",
         "debug": false,
-        "useBuiltIns": "usage"
+        "useBuiltIns": "usage",
+        "corejs": 3
       }
     ]
   ],
@@ -13,7 +14,7 @@
     [
       "@babel/plugin-transform-runtime",
       {
-        "corejs": 2
+        "corejs": 3
       }
     ],
     "@babel/plugin-transform-object-assign",
