--- a/src/frontend/devops-atomstore/package.json
+++ b/src/frontend/devops-atomstore/package.json
@@ -6,6 +6,7 @@
     "@blueking/bkcharts": "^2.0.10",
     "clipboard": "^2.0.4",
     "codemirror": "5.61.0",
+    "core-js": "3.10.0",
     "mavon-editor": "2.7.7",
     "moment": "^2.18.1"
   },
