--- a/src/frontend/devops-environment/package.json
+++ b/src/frontend/devops-environment/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "brace": "^0.10.0",
     "clipboard": "^1.7.1",
+    "core-js": "3.10.0",
     "vee-validate": "^2.0.3",
     "vue-echarts": "^3.0.9",
     "vue-file-upload": "^0.1.12",
