--- a/src/frontend/devops-nav/package.json
+++ b/src/frontend/devops-nav/package.json
@@ -36,7 +36,6 @@
     "@babel/plugin-transform-object-assign": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@babel/runtime-corejs2": "^7.15.4",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "add-asset-html-webpack-plugin": "^2.1.3",
@@ -90,6 +89,7 @@
     "axios": "^0.21.1",
     "bk-magic-vue": "2.3.0",
     "bluebird": "^3.5.1",
+    "core-js": "3.10.0",
     "js-cookie": "^2.2.0",
     "popper.js": "^1.14.4",
     "vee-validate": "^2.0.9",
