--- a/src/frontend/devops-pipeline/package.json
+++ b/src/frontend/devops-pipeline/package.json
@@ -20,6 +20,7 @@
     "brace": "^0.10.0",
     "clipboard": "^1.7.1",
     "cookie": "^0.3.1",
+    "core-js": "3.10.0",
     "gulp": "^3.9.1",
     "js-base64": "^2.4.3",
     "portal-vue": "^1.5.1",
