--- a/src/frontend/devops-quality/package.json
+++ b/src/frontend/devops-quality/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.1",
   "description": "",
   "dependencies": {
+    "core-js": "3.10.0",
     "vue-echarts": "^3.0.9",
     "vue-property-decorator": "^6.0.0",
     "vue-template-compiler": "2.6.12",
     "vuex-class": "^0.3.0"
   },
-  "devDependencies": {    
+  "devDependencies": {
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
