--- a/src/frontend/devops-artifactory/package.json
+++ b/src/frontend/devops-artifactory/package.json
@@ -14,9 +14,9 @@
     "vuex-class": "^0.3.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^4.5.1",
+    "babel-loader": "^8.2.2",
     "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
+    "css-loader": "^6.4.0",
     "eslint": "^7.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "expose-loader": "^0.7.5",
