--- a/src/frontend/devops-codelib/package.json
+++ b/src/frontend/devops-codelib/package.json
@@ -2,13 +2,13 @@
     "name": "devops-codelib",
     "version": "1.0.0",
     "description": "",
-    "dependencies": { 
+    "dependencies": {
         "core-js": "3.10.0",
         "vuex-class": "^0.3.0"
     },
     "devDependencies": {
-        "copy-webpack-plugin": "^4.5.1",
-        "css-loader": "^0.28.11",
+        "babel-loader": "^8.2.2",
+        "css-loader": "^6.4.0",
         "eslint": "^7.3.1",
         "eslint-config-standard": "~12.0.0",
         "eslint-friendly-formatter": "~4.0.1",
