--- a/src/frontend/devops-environment/package.json
+++ b/src/frontend/devops-environment/package.json
@@ -12,9 +12,9 @@
     "vuex-class": "^0.3.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^4.5.1",
+    "babel-loader": "^8.2.2",
     "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
+    "css-loader": "^6.4.0",
     "entrypoint-assets-webpack-plugin": "^1.2.0",
     "eslint": "^7.3.1",
     "eslint-config-standard": "~12.0.0",
