--- a/src/frontend/devops-nav/package.json
+++ b/src/frontend/devops-nav/package.json
@@ -18,9 +18,10 @@
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "add-asset-html-webpack-plugin": "^3.2.0",
-    "copy-webpack-plugin": "^4.5.1",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
+    "css-loader": "^6.4.0",
     "eslint": "^7.3.1",
     "eslint-config-standard": "~12.0.0",
     "eslint-friendly-formatter": "~4.0.1",
