--- a/src/frontend/devops-ticket/package.json
+++ b/src/frontend/devops-ticket/package.json
@@ -10,9 +10,9 @@
     "vuex-class": "^0.3.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^4.5.1",
+    "babel-loader": "^8.2.2",
     "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
+    "css-loader": "^6.4.0",
     "eslint": "^7.3.1",
     "eslint-config-standard": "~12.0.0",
     "eslint-friendly-formatter": "~4.0.1",
