--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/runtime-corejs3": "^7.15.4",
+    "babel-plugin-transform-vue-jsx": "4.0.1",
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
     "chalk": "^4.0.0",
@@ -59,8 +60,5 @@
     "devops-quality",
     "devops-nav",
     "devops-turbo"
-  ],
-  "dependencies": {
-    "@babel/eslint-parser": "^7.15.8"
-  }
+  ]
 }
