--- a/src/frontend/.babelrc
+++ b/src/frontend/.babelrc
@@ -4,9 +4,7 @@
       "@babel/preset-env",
       {
         "modules": "commonjs",
-        "debug": false,
-        "useBuiltIns": "usage",
-        "corejs": 3
+        "debug": false
       }
     ]
   ],
@@ -14,7 +12,10 @@
     [
       "@babel/plugin-transform-runtime",
       {
-        "corejs": 3
+        "corejs": {
+          "version": 3,
+          "proposals": true
+        }
       }
     ],
     "@babel/plugin-transform-object-assign",
