refactor: Upgrade webpack5 issue #5216

--- a/src/frontend/.babelrc
+++ b/src/frontend/.babelrc
@@ -1,13 +1,7 @@
 {
   "presets": [
     [
-      "@babel/preset-env",
-      {
-        "modules": "commonjs",
-        "debug": false,
-        "useBuiltIns": "usage",
-        "corejs": 3
-      }
+      "@babel/preset-env"
     ]
   ],
   "plugins": [
