--- a/containerization/values.yaml
+++ b/containerization/values.yaml
@@ -44,6 +44,33 @@ mysql:
   primary:
     persistence:
       size: 10Gi
+    configuration: |-
+      [mysqld]
+      default_authentication_plugin=mysql_native_password
+      skip-name-resolve
+      explicit_defaults_for_timestamp
+      basedir=/opt/bitnami/mysql
+      plugin_dir=/opt/bitnami/mysql/lib/plugin
+      port=3306
+      socket=/opt/bitnami/mysql/tmp/mysql.sock
+      datadir=/bitnami/mysql/data
+      tmpdir=/opt/bitnami/mysql/tmp
+      max_allowed_packet=16M
+      bind-address=0.0.0.0
+      pid-file=/opt/bitnami/mysql/tmp/mysqld.pid
+      log-error=/opt/bitnami/mysql/logs/mysqld.log
+      character-set-server=UTF8
+      collation-server=utf8_general_ci
+      max_connections=2000
+      [client]
+      port=3306
+      socket=/opt/bitnami/mysql/tmp/mysql.sock
+      default-character-set=UTF8
+      plugin_dir=/opt/bitnami/mysql/lib/plugin
+      [manager]
+      port=3306
+      socket=/opt/bitnami/mysql/tmp/mysql.sock
+      pid-file=/opt/bitnami/mysql/tmp/mysqld.pid
 redis:
   enabled: true
   auth:
@@ -94,6 +121,10 @@ influxdb:
       token: GnnsHwEcQ07sqpidcX2s
   persistence:
     size: 10Gi
+  influxdb:
+    initdbScripts: 
+      creata_db.sh: |
+        echo "create database agentMetrix" > influx --username $INFLUXDB_ADMIN_USER --password $INFLUXDB_ADMIN_USER_PASSWORD;
 mongodb:
   # 是否部署mongodb
   # 如果需要使用外部数据库，设置为false并配置external.mongodb
