--bug=93193335 【Bug】未清空计数导致的模板嵌套判定问题

--- a/src/backend/ci/ext/tencent/stream/boot-stream-tencent/src/test/resources/steps.yml
+++ b/src/backend/ci/ext/tencent/stream/boot-stream-tencent/src/test/resources/steps.yml
@@ -30,4 +30,4 @@ steps:
   - template: codecc.yml@stream-ci-template
     parameters:
       id: 9
-  - template: steps.yml
+  - template: steps1.yml
