--- a/containerization/helm-charts/templates/turbo/deployment.yaml
+++ b/containerization/helm-charts/templates/turbo/deployment.yaml
@@ -63,35 +63,28 @@ spec:
               value: {{ .Values.common.jvmOption }}
             - name: TURBO_SERVICE_PREFIX
               value: {{ include "common.names.fullname" . }}-
-            - name: TURBO_PROFILE
-              value: {{ .Values.common.springProfile }}
-          command:
-            - "/bin/bash"
-            - "-c"
-            - |
-              sleep 10000s;
           ports:
             - name: http
               containerPort: 8080
               protocol: TCP
-          # livenessProbe:
-          #   httpGet:
-          #     path: /actuator/health/liveness
-          #     port: http
-          #   initialDelaySeconds: 120
-          #   periodSeconds: 15
-          #   timeoutSeconds: 10
-          #   failureThreshold: 5
-          #   successThreshold: 1
-          # readinessProbe:
-          #   httpGet:
-          #     path: /actuator/health/readiness
-          #     port: http
-          #   initialDelaySeconds: 60
-          #   periodSeconds: 15
-          #   timeoutSeconds: 10
-          #   failureThreshold: 5
-          #   successThreshold: 1
+          livenessProbe:
+            httpGet:
+              path: /api/actuator/health/liveness
+              port: http
+            initialDelaySeconds: 60
+            periodSeconds: 15
+            timeoutSeconds: 10
+            failureThreshold: 5
+            successThreshold: 1
+          readinessProbe:
+            httpGet:
+              path: /api/actuator/health/readiness
+              port: http
+            initialDelaySeconds: 60
+            periodSeconds: 15
+            timeoutSeconds: 10
+            failureThreshold: 5
+            successThreshold: 1
           volumeMounts:
             - name: quartz-config
               mountPath: /data/workspace/quartz.properties
