--- a/src/backend/ci/core/dispatch-docker/boot-dispatch-kubernetes/src/main/resources/application.yml
+++ b/src/backend/ci/core/dispatch-docker/boot-dispatch-kubernetes/src/main/resources/application.yml
@@ -13,3 +13,22 @@ server:
 # kubernetes-dispatch集群配置
 kubernetes:
   nameSpace: bkci-kube-client
+
+dispatch:
+  build:
+    deployment:
+      cpu: 32
+      memory: 65535M
+      disk: 500G
+    container:
+      registry:
+        host: xx.artifactory.xxx
+        userName: xxxx
+        password: xxxx
+    label: bkci-dispatch-kubenetes
+    entrypoint: dispatch_kubernetes_init.sh
+
+pipeline:
+  build:
+    pool:
+      size: 100000
