--story=867655097 分享卡片嵌入页识别非支持设备时，支持选择当前环境，并跳转至对应环境的页面

--- a/src/gateway/tencent/vhosts/external/devops.external.static.conf
+++ b/src/gateway/tencent/vhosts/external/devops.external.static.conf
@@ -28,7 +28,7 @@ location = /apple-app-site-association {
 # app下载页面
 location ^~ /(artifactory|experience)/download {
     proxy_intercept_errors on;
-    root conf/static;
+    root /data/bkee/ci/app;
     index app_download.html index.html index.htm;
     try_files /app_download.html /index.html;
 }
