--story=867655097 分享卡片嵌入页识别非支持设备时，支持选择当前环境，并跳转至对应环境的页面

--- a/src/gateway/tencent/vhosts/external/devops.external.static.conf
+++ b/src/gateway/tencent/vhosts/external/devops.external.static.conf
@@ -25,14 +25,6 @@ location = /apple-app-site-association {
     try_files /apple-app-site-association /index.html;
 }
 
-# app下载页面
-location ^~ /(artifactory|experience)/download {
-    proxy_intercept_errors on;
-    root /data/bkee/ci/app;
-    index app_download.html index.html index.htm;
-    try_files /app_download.html /index.html;
-}
-
 # devops_app下载页面
 location ~ ^/app/download/(.*) {
     proxy_intercept_errors on;
@@ -42,7 +34,7 @@ location ~ ^/app/download/(.*) {
 }
 
 # 蓝盾外网静态资源路径(包括构建详情)
-location ^~ /(static|resource)/ {
+location ~ ^/(static|resource)/ {
     proxy_intercept_errors on;
     root /data/bkee/ci/app;
     index index.html index.htm;
