--- a/src/frontend/devops-experience/package.json
+++ b/src/frontend/devops-experience/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "devops-quality",
+  "name": "devops-experience",
   "version": "1.0.1",
   "description": "",
   "dependencies": {
-    "vue-echarts": "^3.0.9",
     "vue-property-decorator": "^6.0.0",
-    "vue-template-compiler": "2.6.12",
     "vuex-class": "^0.3.0"
   },
   "devDependencies": {
@@ -23,24 +21,21 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
-    "cli-plugin-eslint": "^0.1.0",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
-    "eslint": "^7.3.1",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
     "expose-loader": "^0.7.5",
-    "ghooks": "^2.0.4",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "url-loader": "^1.0.1",
-    "validate-commit-msg": "^2.14.0",
-    "vue-loader": "^15.0.9",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.8.1",
-    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.4"
   },
@@ -53,7 +48,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "http://gitlab-paas.open.oa.com/devops-fe/devops-experience"
   },
   "gitHead": "afc92dde9341d36ec28514ede9e7cca0af3edb1b"
 }
