--- a/src/frontend/.babelrc
+++ b/src/frontend/.babelrc
@@ -1,19 +1,15 @@
 {
   "presets": [
     [
-      "@babel/preset-env"
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3
+      }
     ]
   ],
   "plugins": [
-    [
-      "@babel/plugin-transform-runtime",
-      {
-        "corejs": {
-          "version": 3,
-          "proposals": true
-        }
-      }
-    ],
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-transform-object-assign",
     "@babel/plugin-syntax-dynamic-import",
     "transform-vue-jsx",
