--- a/src/gateway/core/init.conf
+++ b/src/gateway/core/init.conf
@@ -1,1 +1,8 @@
 init_by_lua_file 'conf/lua/init.lua';
+
+init_worker_by_lua_block {
+    local seed = ngx.time() + ngx.worker.pid() + ngx.var.hostname
+    ngx.log(ngx.ERR , "seed : " , seed)
+    math.randomseed(seed)
+    uuid.seed(seed)
+}
