--story=869173997 【蓝盾网关】网关uuid避免冲突

--- a/src/gateway/core/init.conf
+++ b/src/gateway/core/init.conf
@@ -1,8 +1,7 @@
 init_by_lua_file 'conf/lua/init.lua';
 
 init_worker_by_lua_block {
-    local seed = ngx.time() + ngx.worker.pid() + ngx.var.hostname
-    ngx.log(ngx.ERR , "seed : " , seed)
+    local seed = ngx.time() + ngx.worker.pid()
     math.randomseed(seed)
     uuid.seed(seed)
 }
