feat: 提供kubernetes部署方案 issue #4935 提供dispatch-k8s方案

--- a/support-files/templates/#etc#ci#application-dispatch-kubernetes.yml
+++ b/support-files/templates/#etc#ci#application-dispatch-kubernetes.yml
@@ -16,6 +16,19 @@ kubernetes:
     name: dispatch-kubernetes-init
 
 dispatch:
+  workerFile: __BK_CI_HOME__/agent-package/jar/worker-agent.jar
+  dockerFile: __BK_CI_HOME__/agent-package/jar/worker-agent.jar
+  scripts: __BK_CI_HOME__/agent-package/script
+  #defaultImageUrl: __BK_CI_DOCKER_IMAGE_PREFIX__/paas/bkdevops/centos7.2:v1
+  #defaultImageName: centos7.2
+  #dockerhostPort: __BK_CI_DOCKERHOST_API_PORT__
+  agentLessRegistryUrl: __BK_CI_AGENTLESS_IMAGE_REGISTRY_URL__
+  agentLessImageName: __BK_CI_AGENTLESS_IMAGE_NAME__
+  agentLessRegistryUserName: __BK_CI_AGENTLESS_IMAGE_REGISTRY_USER__
+  agentLessRegistryPassword: __BK_CI_AGENTLESS_IMAGE_REGISTRY_PASSWORD__
+  jobQuota:
+    systemAlertReceiver: 
+    enable: false
   build:
     deployment:
       cpu: 1
