--- a/support-files/templates/#etc#ci#application-dispatch-kubernetes.yml
+++ b/support-files/templates/#etc#ci#application-dispatch-kubernetes.yml
@@ -39,7 +39,9 @@ dispatch:
         host: xx.artifactory.xxx
         userName: xxxx
         password: xxxx
-    label: bkci-dispatch-kubenetes
+    label: 
+      container: bkci-dispatch-kubenetes-container
+      job: bkci-dispatch-kubenetes-job
     volumeMount:
       path: /etc/config
     volume:
