feat: 提供kubernetes部署方案 issue #4935 提供dispatch-k8s方案

--- a/support-files/templates/#etc#ci#application-dispatch-kubernetes.yml
+++ b/support-files/templates/#etc#ci#application-dispatch-kubernetes.yml
@@ -48,6 +48,8 @@ dispatch:
       configMap:
         key: initsh.properties
         path: dispatch_kubernetes_init.sh
+      hostPath:
+        hostdir: /data/volume/bkci/dispatch-kubernetes
 
 pipeline:
   build:
